[FDT test only] Support FDT in UPL
Changes for FDT supported in UPL.
- UPL build switch for HOB or FDT: 0: HOB, 1: FDT (default)
  gUefiPayloadPkgTokenSpaceGuid.PcdUplInterface
- Refer to third-party library libfdt
- Remove payload extra data replaced to payload base address

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "UnitTestFrameworkPkg/Library/GoogleTestLib/googletest"]
 	path = UnitTestFrameworkPkg/Library/GoogleTestLib/googletest
 	url = https://github.com/google/googletest.git
+[submodule "MdePkg/Library/FdtLib/libfdt"]
+	path = MdePkg/Library/FdtLib/libfdt
+	url = https://github.com/devicetree-org/pylibfdt.git
